Adding Note about maven warnings
Signed-off-by: Chandrakar, Prateek <prateek.chandrakar@intel.com>